objects/CRMforNonProfit__Darujme_Pledge__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Custom_Fields__c</fullName>
        <label>Custom Fields (obsolete)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Donation_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donation Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Expected_Variable_Symbol__c</fullName>
        <label>Expected Variable Symbol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__ICO__c</fullName>
        <label>Company Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Last_Transaction_Expected_Date__c</fullName>
        <description>datum a čas očekávané poslední platby. u jednorázové platby tato položka neexistuje, u opakované může nabývat null hodnoty</description>
        <label>Last Transaction Expected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Pledge_At2__c</fullName>
        <label>Pledge At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Pledge_At__c</fullName>
        <label>Pledge At</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Pledge_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pledge ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Post_Code__c</fullName>
        <label>Post Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Project_ID__c</fullName>
        <label>Project ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Promotion_ID__c</fullName>
        <label>Promotion ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Recurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transactions__c</fullName>
        <label># transactions</label>
        <summaryForeignKey>CRMforNonProfit__Darujme_Transaction__c.CRMforNonProfit__Pledge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transferred</label>
        <type>Checkbox</type>
    </fields>
    <label>Darujme Pledge</label>
    <listViews>
        <fullName>CRMforNonProfit__All</fullName>
        <columns>NAME</columns>
        <columns>CRMforNonProfit__Transactions__c</columns>
        <columns>CRMforNonProfit__First_Name__c</columns>
        <columns>CRMforNonProfit__Last_Name__c</columns>
        <columns>CRMforNonProfit__Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRMforNonProfit__Custom_Fields__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CRMforNonProfit__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Darujme Pledges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>